final touch project with html, tailwindcss, js completed

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <!-- Navbar -->
       <nav class="container flex items-center justify-between h-16 sm:h-20">
         <!-- logo -->
-        <div class="font-lobster sm:text-2xl">TailSprouts.</div>
-
+        <a href="#home"><div class="font-lobster sm:text-2xl">TailSprouts.</div>
+        </a>
         <!-- nav items -->
         <!-- lg:get to inital document flow: static -->
         <div
